--- a/HrNexus.csproj
+++ b/HrNexus.csproj
@@ -6,8 +6,9 @@
 
 
   <ItemGroup>
-  <PackageReference Include="Microsoft.Data.Sqlite" Version="3.0.0" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.4" />    
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.4" />  
+    <PackageReference Include="Microsoft.AspNetCore.App" />  
   </ItemGroup>
 
 </Project>
